WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214931
Calling AudioNode constructors should have identical behavior to using create*() function on BaseAudioContext
https://bugs.webkit.org/show_bug.cgi?id=214931
Summary
Calling AudioNode constructors should have identical behavior to using create...
Chris Dumez
Reported
2020-07-29 12:38:27 PDT
Calling AudioNode constructors should have identical behavior than using create*() function on BaseAudioContext. Otherwise, this leads to assertion hits like:
https://ews-build.s3-us-west-2.amazonaws.com/macOS-Mojave-Debug-WK1-Tests-EWS/r405354-14671/imported/w3c/web-platform-tests/webaudio/the-audio-api/the-scriptprocessornode-interface/simple-input-output-crash-log.txt
We need to make sure that the AudioContext gets initialized when an AudioNode constructor gets called. We also need to make sure refNode() gets called if necessary.
Attachments
Patch
(8.49 KB, patch)
2020-07-29 12:41 PDT
,
Chris Dumez
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-07-29 12:41:47 PDT
Created
attachment 405486
[details]
Patch
Eric Carlson
Comment 2
2020-07-29 13:07:37 PDT
Comment on
attachment 405486
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=405486&action=review
> Source/WebCore/ChangeLog:3 > + Calling AudioNode constructors should have identical behavior than using create*() function on BaseAudioContext
s/identical behavior than using create/identical behavior to using create/
> Source/WebCore/ChangeLog:8 > + Calling AudioNode constructors should have identical behavior than using create*() function on BaseAudioContext.
Ditto.
Chris Dumez
Comment 3
2020-07-29 13:24:51 PDT
Committed
r265052
: <
https://trac.webkit.org/changeset/265052
>
Radar WebKit Bug Importer
Comment 4
2020-07-29 13:25:24 PDT
<
rdar://problem/66289207
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug