Source/WebCore/Modules/webaudio/BaseAudioContext.h
@@ -285,6 +285,15 @@ public:
         bool m_mustReleaseLock;
     };
 
+    // The context itself keeps a reference to all source nodes. The source nodes, then reference all nodes they're connected to.
+    // In turn, these nodes reference all nodes they're connected to. All nodes are ultimately connected to the AudioDestinationNode.
+    // When the context dereferences a source node, it will be deactivated from the rendering graph along with all other nodes it is
+    // uniquely connected to. See the AudioNode::ref() and AudioNode::deref() methods for more details.
+    void refNode(AudioNode&);
+    void derefNode(AudioNode&);
+
+    void lazyInitialize();
+
 protected:
     explicit BaseAudioContext(Document&, const AudioContextOptions& = { });
     BaseAudioContext(Document&, AudioBuffer* renderTarget);
@@ -295,19 +304,11 @@ protected:
 
     AudioDestinationNode* destinationNode() const { return m_destinationNode.get(); }
 
-    void lazyInitialize();
     void uninitialize();
 
 #if !RELEASE_LOG_DISABLED
     const char* logClassName() const final { return "BaseAudioContext"; }
 #endif
-
-    // The context itself keeps a reference to all source nodes.  The source nodes, then reference all nodes they're connected to.
-    // In turn, these nodes reference all nodes they're connected to.  All nodes are ultimately connected to the AudioDestinationNode.
-    // When the context dereferences a source node, it will be deactivated from the rendering graph along with all other nodes it is
-    // uniquely connected to.  See the AudioNode::ref() and AudioNode::deref() methods for more details.
-    void refNode(AudioNode&);
-    void derefNode(AudioNode&);
 
     void addReaction(State, DOMPromiseDeferred<void>&&);
     void setState(State);
