Source/WebCore/Modules/webaudio/PannerNode.cpp
@@ -62,6 +62,11 @@ PannerNodeBase::PannerNodeBase(BaseAudioContext& context)
 
 ExceptionOr<Ref<PannerNode>> PannerNode::create(BaseAudioContext& context, const PannerOptions& options)
 {
+    if (context.isStopped())
+        return Exception { InvalidStateError };
+
+    context.lazyInitialize();
+
     auto panner = adoptRef(*new PannerNode(context, options));
 
     auto result = panner->setMaxDistance(options.maxDistance);
